[tool.poetry]
name = "agent"
version = "0.1.0"
description = "AI agent that plays chess"
authors = ["Andres Ponce <andreseeponce@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.12"}
google-genai = "^1.18.0"
logging = "^0.4.9.6"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
